Bug: Refactored so copyright message shows on desktop and hides on mobile as apporpriate

--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -80,7 +80,7 @@ footer nav {
     display: none;
   }
 
-  /* .inner-page-footer .copyright {
+  .inner-page-footer .copyright.hide {
     display: none;
-  } */
+  }
 }
